Basic QR Code Scanner

--- a/website/package.json
+++ b/website/package.json
@@ -10,9 +10,15 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@thirdweb-dev/react": "^3.7.3",
+    "@thirdweb-dev/sdk": "^3.7.3",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "eslint": "8.33.0",
+    "eslint-config-next": "13.1.6",
+    "ethers": "^5.7.2",
+    "html5-qrcode": "^2.3.4",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
