--- a/website/package.json
+++ b/website/package.json
@@ -12,14 +12,17 @@
     "@next/font": "13.1.6",
     "@thirdweb-dev/react": "^3.7.3",
     "@thirdweb-dev/sdk": "^3.7.3",
+    "@thirdweb-dev/storage": "^1.0.6",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "dotenv": "^16.0.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "ethers": "^5.7.2",
     "html5-qrcode": "^2.3.4",
     "next": "13.1.6",
+    "nft.storage": "^7.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
@@ -28,5 +31,6 @@
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
-  }
+  },
+  "type": "module"
 }
