--- a/website/package.json
+++ b/website/package.json
@@ -21,6 +21,7 @@
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "html5-qrcode": "^2.3.4",
+    "moment": "^2.29.4",
     "next": "13.1.6",
     "nft.storage": "^7.0.0",
     "postcss": "^8.4.21",
