--- a/website/package.json
+++ b/website/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate": "node ./src/scripts/generateQR.js"
+    "generate": "node ./src/scripts/generateQR.js",
+    "createBokemon": "node ./src/scripts/deployThirdWebNFT.js"
   },
   "dependencies": {
     "@next/font": "13.1.6",
