--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -17,7 +17,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "noImplicitAny": false,
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/components/feature.jsx"],
   "exclude": ["node_modules"]
